--- a/app.css
+++ b/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* inter-latin-400-normal */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url(/assets/inter-latin-400-normal.woff2) format('woff2'), url(/assets/inter-latin-400-normal.woff) format('woff');
+}
